--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
